# meeting_management

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  result.txt
meeting_management/: hooks.py  migrate.py  patches.txt
meeting_management/desktop_icon/: meet_and_task.json  meeting_management.json
meeting_management/fixtures/: notification.json  server_script.json
meeting_management/meeting_management/custom_fields/: department.json  user.json
meeting_management/meeting_management/doc_event/: customer.py  lead.py  snm_task.py
meeting_management/meeting_management/doctype/child_tasks/: child_tasks.json  child_tasks.py
meeting_management/meeting_management/doctype/meeting/: meeting.js  meeting.json  meeting.py
meeting_management/meeting_management/doctype/meeting_agenda_details/: meeting_agenda_details.json  meeting_agenda_details.py
meeting_management/meeting_management/doctype/meeting_party_representative/: meeting_party_representative.json
meeting_management/meeting_management/doctype/meeting_schedule/: meeting_schedule.js  meeting_schedule.json  meeting_schedule.py
meeting_management/meeting_management/doctype/recurring_meeting/: recurring_meeting.json  recurring_meeting.py
meeting_management/meeting_management/doctype/snm_task/: snm_task.js  snm_task.json  (+3 more)
meeting_management/meeting_management/patches/: delete_duplicate_permission.py
meeting_management/meeting_management/property_setter/: department.json
meeting_management/public/js/: kanban_filter.js
meeting_management/workspace_sidebar/: meet_and_task.json  meeting_management.json
(+21 files in other folders)
