[project]
name = "meeting_management"
authors = [
    { name = "Finbyz Tech PVT LTD", email = "info@finbyz.tech"}
]
description = "meeting"
requires-python = ">=3.14"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
erpnext = ">=16.0.0,<17.0.0"
